--- a/TSA 3/index.html
+++ b/TSA 3/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculator</title>
-    <link rel="stylesheet" href="/assets/style.css">
+    <title>Technical Summative 3 - Calculator</title>
+    <link rel="stylesheet" href="/TSA 3/style.css">
 </head>
 <body>
     <div class="container">
@@ -32,6 +32,6 @@
             </div>
         </div>
     </div>
-    <script src="/assets/script.js"></script>
+    <script src="/TSA 3/script.js"></script>
 </body>
 </html>
